--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,17 @@
   background-size: cover;
 }
 
+a {
+  color: #8B261C;
+}
 .site-footer {
     text-align: center
 }
+
+.project-tagline {
+    opacity: 1.0;
+}
+
+.btn { color: rgba(255, 255, 255, 1.0); background-color: rgba(255, 255, 255, 0.0); border-color: rgba(255, 255, 255, 0.2); }
+.btn:hover { color: rgba(255, 255, 255, 1.0); background-color: rgba(255, 255, 255, 0.4); border-color: rgba(255, 255, 255, 0.5); }
+
