--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,3 +35,13 @@ a {
   background-repeat: no-repeat;  
   background-size: cover;
 }
+
+.main-content h1 {
+  color: #8B261C;
+  font-size: 1.25em;
+}
+
+.main-content h2 {
+  color: #8B261C;
+  font-size: 1em;
+}
