--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,17 +14,20 @@
       <h1 class="project-name">{{ site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ site.description | default: site.github.project_tagline }}</h2>
         <a href="/" class="btn">News</a>
-        <a href="/listen" class="btn">Listen</a>
         <a href="/about" class="btn">About</a>
+        <a href="/listen" class="btn">Listen</a>
+        <a href="/live" class="btn">Live</a>
         <a href="/contact" class="btn">Contact</a>
+        
     </section>
 
     <section class="main-content">
       {{ content }}
       <footer class="site-footer">
         <a href="/">News</a> | 
-        <a href="/listen">Listen</a> | 
         <a href="/about">About</a> | 
+        <a href="/listen">Listen</a> | 
+        <a href="/listen">Live</a> | 
         <a href="/contact">Contact</a>
       </footer>
     </section>
