--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -31,7 +31,7 @@ a {
 
 .page-header {
   background: #8B261C;
-  background-image: url("/assets/img/1500x500.jpg");
+  background-image: url("/assets/img/cd_cover.jpg");
   background-repeat: no-repeat;  
   background-size: cover;
 }
