--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
         <a href="/about" class="btn">About</a>
         <a href="/listen" class="btn">Listen</a>
         <a href="/live" class="btn">Live</a>
-        <a href="/live" class="btn">Watch</a>
+        <a href="/watch" class="btn">Watch</a>
         <a href="/contact" class="btn">Contact</a>
         
     </section>
@@ -29,7 +29,7 @@
         <a href="/about">About</a> | 
         <a href="/listen">Listen</a> | 
         <a href="/listen">Live</a> | 
-        <a href="/contact">Watch</a> |
+        <a href="/watch">Watch</a> |
         <a href="/contact">Contact</a>
       </footer>
     </section>
