--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,10 +25,6 @@ a {
 .btn { color: rgba(255, 255, 255, 1.0); background-color: rgba(255, 255, 255, 0.0); border-color: rgba(255, 255, 255, 0.2); }
 .btn:hover { color: rgba(255, 255, 255, 1.0); background-color: rgba(255, 255, 255, 0.4); border-color: rgba(255, 255, 255, 0.5); }
 
-.photo-credit {
-  font-size: small;
-}
-
 .page-header {
   background: #8B261C;
   background-image: url("/assets/img/cd_cover.jpg");
@@ -45,4 +41,21 @@ a {
 .main-content h2 {
   color: #8B261C;
   font-size: 1em;
+}
+
+.photo-with-credit {
+  font-size: small;
+  width: 300px;
+  float: left;
+  margin-right: 1em;
+
+}
+
+@media screen and (max-width: 42em) {
+.photo-with-credit {
+  font-size: small;
+  width: 100%;
+  float: none;
+  margin-right: 1em;
+}
 }
