--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,7 @@
 @import "{{ site.theme }}";
 
 .page-header {
-  background: url('/assets/img/1500x500.jpg') no-repeat center center fixed; 
+  background: url('/assets/img/cd_cover_lower.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -27,7 +27,7 @@ a {
 
 .page-header {
   background: #8B261C;
-  background-image: url("/assets/img/cd_cover.jpg");
+  background-image: url("/assets/img/cd_cover_lower.jpg");
   background-repeat: no-repeat;  
   background-size: cover;
 }
