--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -64,3 +64,9 @@ a {
   display: block;
   margin: 0 auto;
 }
+
+strong {
+  font-variant: small-caps;
+  font-weight: normal;
+  font-size: larger; 
+}
