--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,10 @@
 ---
 
 @import "{{ site.theme }}";
-
+body {
+  font-family: 'Lato', sans-serif;
+  font-size: 12pt
+}
 .page-header {
   background: url('/assets/img/cd_cover_lower.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
@@ -30,6 +33,11 @@ a {
   background-image: url("/assets/img/cd_cover_lower.jpg");
   background-repeat: no-repeat;  
   background-size: cover;
+}
+
+.main-content {
+  font-size: 12pt;
+  font-weight: 300;
 }
 
 .main-content h1 {
