--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,6 +18,7 @@
         <a href="/listen" class="btn">Listen</a>
         <a href="/live" class="btn">Live</a>
         <a href="/watch" class="btn">Watch</a>
+        <a href="/scores" class="btn">Scores</a>
         <a href="/contact" class="btn">Contact</a>
         
     </section>
@@ -30,6 +31,7 @@
         <a href="/listen">Listen</a> | 
         <a href="/live">Live</a> | 
         <a href="/watch">Watch</a> |
+        <a href="/scores">Scores</a> |
         <a href="/contact">Contact</a>
       </footer>
     </section>
