--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
         <a href="/live" class="btn">Live</a>
         <a href="/watch" class="btn">Watch</a>
         <a href="/scores" class="btn">Scores</a>
+        <a href="/contact" class="btn">Purchase</a>
         <a href="/contact" class="btn">Contact</a>
         
     </section>
@@ -32,6 +33,7 @@
         <a href="/live">Live</a> | 
         <a href="/watch">Watch</a> |
         <a href="/scores">Scores</a> |
+        <a href="/scores">Purchase</a> |
         <a href="/contact">Contact</a>
       </footer>
     </section>
