--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #8B261C;
+  color: #084929;
 }
 .site-footer {
     text-align: center
@@ -29,7 +29,7 @@ a {
 .btn:hover { color: rgba(255, 255, 255, 1.0); background-color: rgba(255, 255, 255, 0.4); border-color: rgba(255, 255, 255, 0.5); }
 
 .page-header {
-  background: #8B261C;
+  background: #084929;
   background-image: url("/assets/img/wildwood_banner.jpg");
   background-repeat: no-repeat;  
   background-size: cover;
@@ -41,13 +41,13 @@ a {
 }
 
 .main-content h1 {
-  color: #8B261C;
+  color: #084929;
   font-size: 1.25em;
   font-variant: small-caps;
 }
 
 .main-content h2 {
-  color: #8B261C;
+  color: #084929;
   font-size: 1em;
 }
 
