--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -79,7 +79,17 @@ a {
     float: none;
     margin-left: 1em;
   }
-}
+  .btn {
+    display: inline-block;
+    width: 5rem;
+    font-size: 0.9rem;
+    padding: 0.6rem 0.9rem;
+  }
+  .btn + .btn {
+      margin-top: 0rem;
+      margin-left: 0;
+    }
+  }
 
 .video {
   display: block;
